fix(styles): hero card alignment in RTL

--- a/packages/styles/scss/components/_hero.scss
+++ b/packages/styles/scss/components/_hero.scss
@@ -411,13 +411,23 @@
 
       &--card-offset {
         grid-area: 3 / 4 / 6 / 5;
+
+        &:after {
+          right: initial;
+          left: -1px;
+        }
       }
 
       &--card {
         grid-area: 3 / 3 / 6 / 4;
       }
 
+      &--breadcrumbs-offset {
+        grid-area: 1 / 4 / 2 / 5;
+      }
+
       &--breadcrumbs {
+        grid-area: 1 / 4 / 2 / 1;
         flex-direction: row-reverse;
       }
 
